--- a/pkg/config-api-client/.openapi-generator-ignore
+++ b/pkg/config-api-client/.openapi-generator-ignore
@@ -22,5 +22,6 @@
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
 
-git_push.sh
+.gitignore
 .travis.yml
+git_push.sh
