--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -41,6 +41,7 @@ jobs:
       - name: Run Tests
         run: |
           just test
+          just coverage
 
       - name: Upload Code Coverage Report
         uses: codecov/codecov-action@v4
