--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -41,8 +41,12 @@ jobs:
       - name: Run Tests
         run: |
           just test
+          just coverage
 
       - name: Upload Code Coverage Report
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./pkg/config-api-client/.coverage,./pkg/config-api-provider/.coverage
+          flage: client,provider
+          fail_ci_if_error: true
