feat: provider | documentation generation

--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -48,6 +48,13 @@ jobs:
           just test
           just coverage
 
+      - name: Check Provider docs up to date
+          just generate-provider-docs
+          git diff --exit-code -- pkg/config-api-provider/docs
+
+      - name: Check Provider docs valid
+          just validate-provider-docs
+
       - name: Upload Code Coverage Report
         uses: codecov/codecov-action@v4
         with:
