--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -49,11 +49,12 @@ jobs:
           just coverage
 
       - name: Check Provider docs up to date
+        run: |
           just generate-provider-docs
           git diff --exit-code -- pkg/config-api-provider/docs
 
       - name: Check Provider docs valid
-          just validate-provider-docs
+        run: just validate-provider-docs
 
       - name: Upload Code Coverage Report
         uses: codecov/codecov-action@v4
