--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -36,7 +36,13 @@ jobs:
         run: just setup-dev
 
       - name: Run Code Linting Test
-        run: just lint >> "$GITHUB_STEP_SUMMARY"
+        run: golines . --dry-run
+
+      - name: Run Code Linting-lint Test
+        run: just lint-provider
+
+      - name: Run Code Linting Test
+        run: just lint
 
       - name: Check package files up to date
         run: |
