workflow just lint

--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -36,9 +36,7 @@ jobs:
         run: just setup-dev
 
       - name: Run Code Linting Test
-        run: |
-          just lint-client
-          just lint-provider
+        run: just lint
 
       - name: Check package files up to date
         run: |
