--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -51,7 +51,8 @@ jobs:
       - name: Check Provider docs up to date
         run: |
           just generate-provider-docs
-          git diff --exit-code -- docs
+          git add --all docs
+          git diff --cached --exit-code -- docs || exit 1
 
       - name: Check Provider docs valid
         run: just validate-provider-docs
