--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -41,16 +41,9 @@ checksum:
   algorithm: sha256
 signs:
   - artifacts: checksum
+    cmd: just
     args:
-      # if you are using this in a GitHub action or some other automated pipeline, you
-      # need to pass the batch flag to indicate its not interactive.
-      - "--batch"
-      - "--local-user"
-      - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
-      - "--output"
-      - "${signature}"
-      - "--detach-sign"
-      - "${artifact}"
+      - "sign"
 release:
   extra_files:
     - glob: 'terraform-registry-manifest.json'
