--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -27,6 +27,16 @@ jobs:
         with:
           go-version: "${{ env.go_version }}"
 
+      - name: Setup Golang caches
+        uses: actions/cache@v4.1.2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-golang-
+
       - name: Setup Just
         uses: extractions/setup-just@v2
         env:
