--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -9,7 +9,7 @@ linters-settings:
   lll:
     line-length: 128
   goimports:
-    local-prefixes: "github.com/HPE"
+    local-prefixes: "github.com/aruba-uxi"
   godox:
     keywords:
       - OPTIMIZE
@@ -18,19 +18,6 @@ linters-settings:
   funlen:
     lines: 90
     statements: 60
-  depguard: # we need to investigate this, it could be important
-    rules:
-      Main:
-        allow:
-          - $gostd
-          - github.com/hashicorp/terraform-plugin-go
-          - github.com/hashicorp/terraform-plugin-mux
-          - github.com/hashicorp/terraform-plugin-sdk
-          - github.com/HPE/terraform-provider-hpegl
-          - github.com/hewlettpackard/hpegl-provider-lib
-          - github.com/hewlettpackard/hpegl-metal-terraform-resources
-          - github.com/HewlettPackard/hpegl-containers-terraform-resources
-          - github.com/HewlettPackard/hpegl-vmaas-terraform-resources
 
 linters:
   # See the dedicated "linters" documentation section.
