--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -46,7 +46,7 @@ linters:
     - maintidx # we want this
     - mnd # we want this  todo: also see gomnd
     - gomnd # disabled in gl provider  todo: also see mnd
-    - nlreturn # we want this
+    # - nlreturn # we want this
     - noctx # we want this
     - nestif # we want this
     - revive # we want this
