--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -33,7 +33,6 @@ linters:
     - gomnd # disabled in gl provider  todo: also see mnd
     - noctx # we want this
     - tagliatelle # we want this
-    - testifylint # we want this
     - thelper # we want this
     - usestdlibvars # we want this
     - whitespace # we want this
@@ -81,6 +80,7 @@ issues:
         - stylecheck
         - goconst
         - maintidx
+        - testifylint
       path: pkg/config-api-client
 
     - linters:
