--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -18,6 +18,10 @@ linters-settings:
   funlen:
     lines: 90
     statements: 60
+  tagliatelle:
+    case:
+      rules:
+        json: snake
 
 linters:
   # See the dedicated "linters" documentation section.
@@ -32,7 +36,6 @@ linters:
     - mnd # we want this  todo: also see gomnd
     - gomnd # disabled in gl provider  todo: also see mnd
     - noctx # we want this
-    - tagliatelle # we want this
     - thelper # we want this
     - usestdlibvars # we want this
     - whitespace # we want this
