--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -18,6 +18,10 @@ linters-settings:
   funlen:
     lines: 90
     statements: 60
+  tagliatelle:
+    case:
+      rules:
+        json: snake
 
 linters:
   # See the dedicated "linters" documentation section.
@@ -26,32 +30,16 @@ linters:
   disable:
     - cyclop # we have gocyclo, apparently its better
     - execinquery # deprecated
-
-    - contextcheck # we want this
     - copyloopvar # if we update to later than go 1.22
-    - depguard # for banning specific dependencies
-    - dupl # we want this
-    - dupword # we want this
-    - errorlint # we want this
-    - forcetypeassert # we want this
-    - funlen # we want this
-    - goconst # we want this
-    - gocritic # we want this
     - intrange # later version of go
-    # - ireturn # we want this
-    - lll # we want this
-    - maintidx # we want this
+
     - mnd # we want this  todo: also see gomnd
     - gomnd # disabled in gl provider  todo: also see mnd
     - noctx # we want this
-    - nestif # we want this
     - revive # we want this
-    - tagliatelle # we want this
-    - testifylint # we want this
-    - thelper # we want this
-    - usestdlibvars # we want this
-    - whitespace # we want this
-    - wrapcheck # we want this
+    - dupl # we want this
+    - contextcheck # we want this, but the "trivial" fix causes context cancelled errors in tests
+    - depguard # for banning specific dependencies
 
     - canonicalheader # for checking copyright headers
     - err113 # disabled in gl provider
@@ -90,6 +78,9 @@ issues:
 
     - linters:
         - stylecheck
+        - goconst
+        - maintidx
+        - testifylint
       path: pkg/config-api-client
 
     - linters:
