--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -43,12 +43,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Code Linting Test
-        run: just lint
+        run: just lint || exit 1
 
       - name: Check package files up to date
         run: |
           just tidy
-          git diff --exit-code -- go.* pkg/config-api-client/go.*
+          git diff --exit-code -- go.* pkg/config-api-client/go.* || exit 1
 
       - name: Run Tests
         run: |
