--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   lint-test-code:
     name: Lint & Test Code
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-m
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
