--- a/.github/workflows/lint-test-code.yaml
+++ b/.github/workflows/lint-test-code.yaml
@@ -69,10 +69,11 @@ jobs:
       - name: Check Provider docs valid
         run: just validate-provider-docs
 
-      - name: Upload Code Coverage Report
-        uses: codecov/codecov-action@v4
+      - name: Coverage comment
+        uses: py-cov-action/python-coverage-comment-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./pkg/config-api-client/.coverage,.coverage
-          flage: client,provider
-          fail_ci_if_error: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ANNOTATE_MISSING_LINES: true
+          ANNOTATION_TYPE: warning
+          MINIMUM_GREEN: 100
+          MINIMUM_ORANGE: 70
